# template.py

./: .pre-commit-config.yaml  README.md  cookiecutter.json
hooks/: post_gen_project.py  pre_gen_project.py
{{ cookiecutter.project_slug }}/: .pre-commit-config.yaml  pyproject.toml
{{ cookiecutter.project_slug }}/src/{{ cookiecutter.project_slug }}/: __main__.py
