[project]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"

[project.optional-dependencies]
dev = ["pre-commit"]

[tool.ruff.lint]
select = ["F", "E", "W", "I", "N", "UP", "B"]
ignore = ["W191", "E111", "E114", "E117", "E501"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
